@@ -4,6 +4,8 @@ Changes in version 0.1.2.8-alpha - 2007-??-??
       clear the corresponding on_circuit variable, and remember later that
       we don't need to send a redundant CLOSED event.  (Resolves part 3 of
       bug 367.)
+    - Report events where a resolve succeeded or where we got a socks
+      protocol error correctly, rather than calling both of them "INTERNAL".
 
 
 Changes in version 0.1.2.7-alpha - 2007-02-06
